<?xml version="1.0"?>
<package>
  <name>kobuki_tf</name>
  <version>0.0.0</version>
  <description>The kobuki_tf package</description>

  <maintainer email="rt@todo.todo">rt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>