<?xml version="1.0"?>
<package>
  <name>openni2_xtion</name>
  <version>0.0.1</version>
  <description>The openni2_xtion package</description>

  <maintainer email="passionvirus@gmail.com">Yoonseok Pyo</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/openni2_xtion</url> -->
  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
